@@ -11,6 +11,7 @@ Cleanup
   - hard to follow, especially destroy stuff
   - atleast a common create func?
 - abstract listener_data a bit more?  
+-metric value marshall/unmarshall
 
 Portability
 - IPv6
